# RADAR-HighwayPerception

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: models.yaml  thresholds.yaml
data/: download_bdd100k.ipynb
data/acdc_hf/: test.csv  train.csv
outputs/eval/: condition_metrics.json
reports/: clean_vs_adverse.md  failure_taxonomy.md
scripts/: eval_conditions.py  run_demo.py
src/highway_perception/: __init__.py  pipeline.py  types.py
src/highway_perception/data/: acdc_loader.py  bdd_loader.py  splits.py
src/highway_perception/detector/: yolo_ultralytics.py
src/highway_perception/lane/: laneaf_adapter.py
src/highway_perception/metrics/: detection_metrics.py  lane_metrics.py  system_metrics.py  tracking_metrics.py
src/highway_perception/quality/: condition_classifier.py
src/highway_perception/tracker/: bytetrack_adapter.py
src/highway_perception/viz/: overlay.py
src/highway_perception_allweather.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
